[gd_scene load_steps=2 format=3 uid="uid://cho12fkcmwlds"]

[ext_resource type="Script" path="res://scenes/main/spawner/spawner.gd" id="1_hhcuf"]

[node name="Spawner" type="Node2D"]
z_index = 10
script = ExtResource("1_hhcuf")
spawn_rate = 3.0
enemy_count = 40

[node name="SpawnLocation1" type="Position2D" parent="."]

[node name="SpawnLocation2" type="Position2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_start_wave"]
